5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1834_1276.log
== SUBMITION (2019-07-01 20:11:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(n):
	vetor[i]=sum([:,j])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- EXECUTION TIME:
0.744948
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 9
    vetor[i]=sum([:,j])
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:11:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(n):
	vetor[i]=sum([:,j])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- ERROR:
File "XXXX", line 9
    vetor[i]=sum([:,j])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:11:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(n):
	vetor[i]=sum(matriz[:,j])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:11:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(n):
	vetor[i]=sum(matriz[:,j])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- EXECUTION TIME:
1.13173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1276/main.py", line 9, in <module>
    vetor[i]=sum(matriz[:,j])
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:12:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(size(vetor)):
	vetor[i]=sum(matriz[:,j])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:12:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(size(vetor)):
	vetor[i]=sum(matriz[:,j])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- EXECUTION TIME:
0.765001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1276/main.py", line 9, in <module>
    vetor[i]=sum(matriz[:,j])
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:12:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,j])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:12:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- EXECUTION TIME:
0.751429
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:12:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[0]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:14:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:14:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- EXECUTION TIME:
1.02844
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:14:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
a=0
for j in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=j+1
		print(a)
		

-- EXECUTION TIME:
0.925981
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:15:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
a=0
for i in range(size(vetor)):
	if(vetor[j]==max(vetor)):
		a=i+1
		print(a)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:15:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
a=0
for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		a=i+1
		print(a)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:16:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
a=0
for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		a=i+1
		print(a)
		

-- EXECUTION TIME:
1.10922
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
x=0
for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		x=i+1
		print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:42:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
x=0
for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		x=i+1
		print(x)
		

-- EXECUTION TIME:
1.05585
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:04:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
x=0
for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		x=i+1
		print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:50:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	

for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		i=i+1
		print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:51:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	

for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		i=i+1
		print(i)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:51:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
x=0
for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		x=i+1
		print(i)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:51:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	

for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		x=i+1
		print(i)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:51:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	

for i in range(size(vetor)):
	if(vetor[i]==max(vetor)):
		x=i+1
		print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:53:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	

for i in range(size(n)):
	if(vetor[i]==max(vetor)):
		x=i+1
		print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:54:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Matriz: ")))
n=shape(matriz)[1]
vetor=zeros(n, dtype=int)

for i in range(size(n)):
	vetor[i]=sum(matriz[:,i])
	
x=1
for i in range(size(n)):
	if(vetor[i]==max(vetor)):
		x=i+1
		print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
